force-app/main/default/objects/Site__c/Site__c.object-meta.xml
<CustomObject>
    <description>There may be multiple building addresses associated with an Account. This Site object can capture that information for other addresses related to the Account.</description>
    <label>Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>