force-app/main/default/objects/Site__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>The Account that this Site belongs to.</description>
    <inlineHelpText>Which Account does this site belong to?</inlineHelpText>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>