force-app/main/default/objects/Site__c/fields/Site_Floor__c.field-meta.xml
<CustomField>
    <fullName>Site_Floor__c</fullName>
    <description>What floor of the building is this site?</description>
    <inlineHelpText>What floor of the building is this site?</inlineHelpText>
    <label>Site Floor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>