force-app/main/default/objects/Site__c/fields/Site_Street__c.field-meta.xml
<CustomField>
    <fullName>Site_Street__c</fullName>
    <label>Site Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>