force-app/main/default/objects/Site__c/fields/Site_Zip__c.field-meta.xml
<CustomField>
    <fullName>Site_Zip__c</fullName>
    <label>Site Zip</label>
    <length>15</length>
    <type>Text</type>
</CustomField>